<resources>
    <string name="app_name">Mini-CRM App</string>
    <string name="title_home">Inicio</string>
    <string name="title_clientes">Clientes</string>
    <string name="title_config">Configuración</string>
    <string name="lbl_hint_search">Contacto a Buscar</string>
    <string name="lbl_hint_nombre_completo">Nombre Completo</string>
    <string name="lbl_hint_telefono">Número de Teléfono</string>
    <string name="lbl_hint_correo">Correo Electrónico</string>
    <string name="btn_modificar_cliente">Guardar Cliente</string>
    <string name="btn_crear_cliente">Crear Cliente</string>
</resources>