<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hn.uth.minicrmapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_clientes"
        android:name="hn.uth.minicrmapp.ui.crm.ClientesFragment"
        android:label="@string/title_clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="hn.uth.minicrmapp.ui.config.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />
</navigation>